--- a/bouncing-dvd-logo-master/index.html
+++ b/bouncing-dvd-logo-master/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bouncing DVD Logo</title>
+        <title>boink-boink</title>
         <style>
             * {margin:0; padding: 0; color:red;}
         </style>
