--- a/bouncing-dvd-logo-master/index.html
+++ b/bouncing-dvd-logo-master/index.html
@@ -5,9 +5,11 @@
             * {margin:0; padding: 0; color:red;}
         </style>
     </head>
+<!--code kya khol raha h kuch ni milega yahan-->
 
     <body>
         <canvas id="tv-screen"></canvas>
         <script src="js/app.js"></script>
+<!--jaake thoda padhai likhai kro dusron ka d code kholke ghar nhi chlta-->
     </body>
 </html>
