--- a/bouncing-dvd-logo-master/index.html
+++ b/bouncing-dvd-logo-master/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>boink-boink</title>
+        <title>boink-boink by rohn</title>
         <style>
             * {margin:0; padding: 0; color:red;}
         </style>
